--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,37 @@
-plugins {
-    id 'java'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'io.spring.gradle:dependency-management-plugin:1.0.6.RELEASE'
+    }
 }
 
-group 'RestAssured_examples'
-version '1.0-SNAPSHOT'
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'java-library'
 
-sourceCompatibility = 1.8
+apply from: 'gradle/default-settings.gradle'
 
-repositories {
-    mavenCentral()
+
+processResources {
+    expand(project.properties)
 }
 
-dependencies {
-    testCompile group: 'io.rest-assured', name: 'rest-assured', version: '4.0.0'
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.0-M1'
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0-M1'
 
+dependencyManagement {
+    dependencies {
+        dependency 'io.rest-assured:rest-assured:4.0.0'
+        dependency "org.junit.jupiter:junit-jupiter-api:$junit5"
+        dependency "org.junit.jupiter:junit-jupiter-engine:$junit5"
+    }
+}
+
+dependencies{
+    testImplementation 'io.rest-assured:rest-assured'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
+}
+
+test {
+    useJUnitPlatform()
 }
